--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -4,29 +4,37 @@
     android:id="@+id/activity_login_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="re.pablochrun.com.reopendoors.LoginMain">
+    tools:context="re.pablochrun.com.reopendoors.LoginMain"
+    android:background="@color/loginScreenBackground">
 
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/etPassword"
-        android:layout_alignRight="@id/etPassword"
-        android:inputType="textPassword"
-        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        >
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textSize="40sp"
+            android:textColor="@color/colorLogin"
+            android:background="@drawable/login_background_drawable"
+            android:="5dp"
+            />
 
-
-    <Button
-        android:id="@+id/btLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/etPassword"
-        />
-
+        <Button
+            android:id="@+id/btLogin"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:text="@string/login_text"
+            android:layout_below="@id/etPassword"
+            android:textColor="@color/colorLogin"
+            android:background="@drawable/login_background_drawable"
+            android:paddingTop="5dp"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
