--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorLogin">#5AC73F</color>
     <color name="loginScreenBackground">#000000</color>
+    <color name="colorErrorLogin">#8A0707</color>
 
 </resources>
