--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -5,22 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/custom_toast_container"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/custom_toast_border">
 
     <ImageView android:id="@+id/image_custom_toast"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@android:drawable/ic_dialog_alert"
+        android:src="@drawable/umbrella_corp"
         />
 
     <TextView android:id="@+id/custom_toast_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorErrorLogin"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textAlignment="gravity"
         />
-
-
 
 </LinearLayout>
