--- a/app/src/main/res/layout/admin_door_passwords.xml
+++ b/app/src/main/res/layout/admin_door_passwords.xml
@@ -5,36 +5,109 @@
     android:orientation="vertical"
     android:background="@color/loginScreenBackground">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        >
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/puerta_1"
             android:layout_height="wrap_content"
-            android:text="@string/Door_ID"
-            android:color="@color/colorLogin"/>
+            android:text="@string/door_ID_1"
+            android:textColor="@color/colorLogin"
+            android:background="@drawable/login_background_drawable"
+            android:layout_marginRight="5dp"
+            android:textSize="40sp"
+            android:layout_width="200dp"
+            android:textAlignment="textEnd"
+            android:layout_alignParentBottom="true"
+            />
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/puerta_1_pass"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="@string/Pass_door_ID"
-            android:color="@color/colorLogin"/>
+            android:background="@drawable/login_background_drawable"
+            android:textSize="40sp"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/puerta_1"
+            android:inputType="number"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        >
+        <TextView
+            android:id="@+id/puerta_2"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/door_ID_2"
+            android:textColor="@color/colorLogin"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/login_background_drawable"
+            android:textSize="40sp"
+            android:textAlignment="textEnd"
+            android:layout_alignParentTop="true"
+            />
 
         <EditText
+            android:id="@+id/puerta_2_pass"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_background_drawable"
+            android:textSize="40sp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/puerta_2"
+            android:inputType="number"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:layout_weight="1"
+        >
+
+        <Button
+            android:id="@+id/cancelAdminPass"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="@string/cancel_admin"
+            android:layout_below="@id/etPassword"
+            android:textColor="@color/colorLogin"
+            android:background="@drawable/login_background_drawable"
+            android:layout_marginRight="5dp"
+            android:textAlignment="gravity"
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp"
+            android:onClick="cancelAdmin"
+            />
+
+        <Button
+            android:id="@+id/okAdminPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="@string/ok_admin"
+            android:layout_below="@id/etPassword"
+            android:textColor="@color/colorLogin"
+            android:background="@drawable/login_background_drawable"
+            android:layout_marginLeft="5dp"
+            android:textAlignment="gravity"
+            android:onClick="confirmAdmin"
+            android:layout_toRightOf="@id/cancelAdminPass"
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp"
+            />
+    </RelativeLayout>
 
 </LinearLayout>
