--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
 
     <color name="toast_gradient_start">#363D34</color>
     <color name="toast_gradient_end">#000000</color>
+    <color name="mainScreenBackground">#000000</color>
+    <color name="colorStartGame">#8A0707</color>
 
 </resources>
