--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -39,6 +39,7 @@
             android:textAlignment="gravity"
             android:onClick="checkLogin"
             />
+        <!--style="@style/buttonLoginStyle"-->
     </RelativeLayout>
 
 </RelativeLayout>
