--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -42,6 +42,7 @@
         android:text="@string/startGame"
         android:background="@drawable/start_background_drawable"
         android:textColor="@color/colorStartGame"
+        android:onClick="startGame"
         />
     </RelativeLayout>
 
