--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="buttonLoginStyle" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/selector_login</item>
+    </style>
+
 </resources>
