gridlayout done, it rest check password and iterate from door one to two

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="mainScreenBackground">#000000</color>
     <color name="colorStartGame">#8A0707</color>
 
+    <color name="gridItemNumber">#8A0707</color>
+    <color name="doorScreenText">#FAF1F1</color>
 </resources>
