division between games done.

--- a/app/src/main/res/layout/admin_door_two_password.xml
+++ b/app/src/main/res/layout/admin_door_two_password.xml
@@ -8,35 +8,41 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:layout_weight="4"
+        android:layout_marginEnd="5dp"
         >
-        <TextView
-            android:id="@+id/puerta_1"
-            android:layout_height="wrap_content"
-            android:text="@string/door_ID_1"
-            android:textColor="@color/colorLogin"
-            android:background="@drawable/login_background_drawable"
-            android:layout_marginRight="5dp"
-            android:textSize="40sp"
-            android:layout_width="200dp"
-            android:textAlignment="textEnd"
-            android:layout_alignParentBottom="true"
-            />
 
-        <EditText
-            android:id="@+id/puerta_1_pass"
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/login_background_drawable"
-            android:textSize="40sp"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/puerta_1"
-            android:inputType="number"
-            />
+            android:layout_centerInParent="true"
+            >
+            <TextView
+                android:id="@+id/puerta_2"
+                android:layout_height="wrap_content"
+                android:text="@string/door_ID_2"
+                android:textColor="@color/colorLogin"
+                android:background="@drawable/login_background_drawable"
+                android:layout_marginEnd="5dp"
+                android:textSize="40sp"
+                android:layout_width="200dp"
+                android:textAlignment="textEnd"
+
+                />
+
+            <EditText
+                android:id="@+id/puerta_2_pass"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/login_background_drawable"
+                android:textSize="40sp"
+                android:layout_toRightOf="@id/puerta_2"
+                android:inputType="number"
+                />
+        </LinearLayout>
     </RelativeLayout>
 
+    <!--
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -57,6 +63,7 @@
             android:layout_alignParentTop="true"
             />
 
+
         <EditText
             android:id="@+id/puerta_2_pass"
             android:layout_width="200dp"
@@ -67,8 +74,9 @@
             android:layout_toRightOf="@id/puerta_2"
             android:inputType="number"
             />
-    </RelativeLayout>
 
+    </RelativeLayout>
+-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
