--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
 
     <color name="gridItemNumber">#8A0707</color>
     <color name="doorScreenText">#FAF1F1</color>
+
+    <color name="select_game">#DF9310</color>
 </resources>
