--- a/app/src/main/res/layout/activity_door_two_pass.xml
+++ b/app/src/main/res/layout/activity_door_two_pass.xml
@@ -9,28 +9,29 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
         android:background="@color/doorScreenText"
         >
 
+        <!--
         <ImageView
             android:id="@+id/imageUmbrellaInPassScreen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:src="@drawable/umbrella_corp"
             android:onClick="adminPass"/>
+        -->
 
         <TextView
-            android:id="@+id/textScreenUC"
+            android:id="@+id/textScreenUpper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/imageUmbrellaInPassScreen"
+
             android:textSize="10sp"
-            android:text="@string/umbrellaCorp"
+            android:text="@string/upperMessage"
             android:textColor="@color/gridItemNumber"
             />
 
@@ -44,7 +45,7 @@
             android:textColorHint="@color/gridItemNumber"
             android:gravity="bottom|left"
             android:textSize="40sp"
-            android:layout_toRightOf="@id/imageUmbrellaInPassScreen"/>
+            />
 
 
 
@@ -59,7 +60,7 @@
         >
 
         <GridView
-            android:id="@+id/gridView1"
+            android:id="@+id/gridView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:numColumns="3"
