--- a/app/src/main/res/layout/activity_main_screen_games.xml
+++ b/app/src/main/res/layout/activity_main_screen_games.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="re.pablochrun.com.reopendoors.ihm.MainScreen"
+    tools:context="re.pablochrun.com.reopendoors.ihm.MainScreenGames"
     android:background="@color/loginScreenBackground"
     android:orientation="vertical">
 
