--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="doorScreenText">#FAF1F1</color>
 
     <color name="select_game">#DF9310</color>
+
+    <color name="countdown">#8A0707</color>
 </resources>
