check and delete buttons implemented in custom GridView

--- a/app/src/main/res/layout/activity_door_one_pass.xml
+++ b/app/src/main/res/layout/activity_door_one_pass.xml
@@ -81,7 +81,7 @@
             android:id="@+id/countdown"
             android:text="AAA"
             android:textSize="30sp"
-            android:textColor="@color/countdown"
+            android:textColor="@color/countdown_1"
             >
 
 
