--- a/app/src/main/res/layout/custom_grid_item.xml
+++ b/app/src/main/res/layout/custom_grid_item.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:orientation="vertical" >
 
-    <!--
+
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageViewGridView"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/ic_launcher" />
-    -->
+        android:src="@drawable/send"/>
+
 
     <TextView
         android:id="@+id/textViewGrid"
@@ -27,6 +26,6 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/start_background_drawable"
-        android:text="@string/gridText" />
+        />
 
-</LinearLayout> 
+</RelativeLayout>
