selector for buttons added.Remains in gridview

--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -33,8 +33,8 @@
             android:textSize="40sp"
             android:text="@string/login_text"
             android:layout_below="@id/etPassword"
-            android:textColor="@color/colorLogin"
-            android:background="@drawable/login_background_drawable"
+            android:textColor="@drawable/selector_login_color"
+            android:background="@drawable/selector_login"
             android:layout_margin="5dp"
             android:textAlignment="gravity"
             android:onClick="checkLogin"
