--- a/app/src/main/res/drawable/start_game_background_drawable.xml
+++ b/app/src/main/res/drawable/start_game_background_drawable.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/colorButtonDisabled" />
+        android:color="@color/colorStartGame"
+        />
     <gradient
         android:startColor="@color/toast_gradient_start"
         android:endColor="@color/toast_gradient_end"
