--- a/app/src/main/res/layout/activity_game_selector_screen.xml
+++ b/app/src/main/res/layout/activity_game_selector_screen.xml
@@ -15,8 +15,8 @@
             android:id="@+id/selector_escape_room"
             android:layout_height="wrap_content"
             android:text="@string/escape_room"
-            android:textColor="@color/select_game"
-            android:background="@drawable/select_game"
+            android:textColor="@drawable/selector_game_color"
+            android:background="@drawable/selector_game"
             android:layout_marginEnd="5dp"
             android:textSize="40sp"
             android:layout_width="match_parent"
@@ -38,9 +38,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/juego_2_name"
-            android:textColor="@color/select_game"
+            android:textColor="@drawable/selector_game_color"
+            android:background="@drawable/selector_game"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/select_game"
             android:textSize="40sp"
             android:textAlignment="center"
             android:layout_centerInParent="true"
