--- a/app/src/main/res/layout/activity_main_screen_games.xml
+++ b/app/src/main/res/layout/activity_main_screen_games.xml
@@ -32,18 +32,18 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-    <Button
-        android:id="@+id/btnStartGame"
-        android:layout_width="match_parent"
-        android:textSize="40sp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_centerInParent="true"
-        android:text="@string/startGame"
-        android:background="@drawable/start_background_drawable"
-        android:textColor="@color/colorStartGame"
-        android:onClick="startGame"
-        />
+        <Button
+            android:id="@+id/btnStartGame"
+            android:layout_width="match_parent"
+            android:textSize="40sp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_centerInParent="true"
+            android:text="@string/startGame"
+            android:background="@drawable/selector_start_game"
+            android:textColor="@drawable/selector_start_game_color"
+            android:onClick="startGame"
+            />
     </RelativeLayout>
 
     <RelativeLayout
