all buttons with selector

--- a/app/src/main/res/layout/admin_door_two_password.xml
+++ b/app/src/main/res/layout/admin_door_two_password.xml
@@ -42,41 +42,7 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <!--
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="5dp"
-        >
-        <TextView
-            android:id="@+id/puerta_2"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="@string/door_ID_2"
-            android:textColor="@color/colorLogin"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/login_background_drawable"
-            android:textSize="40sp"
-            android:textAlignment="textEnd"
-            android:layout_alignParentTop="true"
-            />
 
-
-        <EditText
-            android:id="@+id/puerta_2_pass"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/login_background_drawable"
-            android:textSize="40sp"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/puerta_2"
-            android:inputType="number"
-            />
-
-    </RelativeLayout>
--->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -91,8 +57,8 @@
             android:textSize="30sp"
             android:text="@string/cancel_admin"
             android:layout_below="@id/etPassword"
-            android:textColor="@color/colorLogin"
-            android:background="@drawable/login_background_drawable"
+            android:textColor="@drawable/selector_login_color"
+            android:background="@drawable/selector_login"
             android:layout_marginRight="5dp"
             android:textAlignment="gravity"
             android:paddingRight="5dp"
@@ -107,8 +73,8 @@
             android:textSize="30sp"
             android:text="@string/ok_admin"
             android:layout_below="@id/etPassword"
-            android:textColor="@color/colorLogin"
-            android:background="@drawable/login_background_drawable"
+            android:textColor="@drawable/selector_login_color"
+            android:background="@drawable/selector_login"
             android:layout_marginLeft="5dp"
             android:textAlignment="gravity"
             android:onClick="confirmAdmin"
