--- a/app/src/main/res/drawable/drawable_umbrella_corp_remarked.xml
+++ b/app/src/main/res/drawable/drawable_umbrella_corp_remarked.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape android:shape="rectangle">
+            <stroke
+                android:width="1dp"
+                android:color="@color/remarked" />
+            <gradient
+                android:startColor="@color/toast_gradient_start"
+                android:endColor="@color/toast_gradient_end"
+                android:angle="-90"/>
+        </shape>
+    </item>
+    <item
+        android:drawable="@drawable/umbrella_corp"
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp"
+        android:width="35dp"
+        android:height="35dp"
+        android:gravity="center">
+    </item>
 </layer-list>
