--- a/app/src/main/res/layout/custom_grid_item.xml
+++ b/app/src/main/res/layout/custom_grid_item.xml
@@ -22,10 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="40sp"
-        android:textColor="@color/gridItemNumber"
+        android:textColor="@drawable/selector_start_game_color"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/start_background_drawable"
+        android:background="@drawable/selector_start_game"
         />
 
 </RelativeLayout>
