riddle popup implemented. Ready to customize

--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -39,6 +39,14 @@
             android:textAlignment="gravity"
             android:onClick="checkLogin"
             />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_help"
+            android:layout_toRightOf="@id/etPassword"
+            android:onClick="showRiddle"
+            />
+
         <!--style="@style/buttonLoginStyle"-->
     </RelativeLayout>
 
