--- a/app/src/main/res/layout/riddle_popup.xml
+++ b/app/src/main/res/layout/riddle_popup.xml
@@ -4,19 +4,21 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
      
+    <!--
     <ImageView
         android:id="@+id/tooltip_nav_up"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_gravity="center"
         android:background="@android:drawable/ic_delete" />
-     
+     -->
     <TextView
         android:id="@+id/riddle_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/riddle_popup"
-        android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:textColor="@color/riddle_color_text"
+        android:textSize="30dp" />
 </LinearLayout>
