--- a/app/src/main/res/layout/riddle_popup.xml
+++ b/app/src/main/res/layout/riddle_popup.xml
@@ -4,21 +4,50 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
      
-    <!--
-    <ImageView
-        android:id="@+id/tooltip_nav_up"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_gravity="center"
-        android:background="@android:drawable/ic_delete" />
-     -->
-    <TextView
-        android:id="@+id/riddle_text"
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/riddle_popup"
-        android:textColor="@color/riddle_color_text"
-        android:textSize="30dp" />
+    <RelativeLayout
+        android:id="@+id/relativeRiddle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/hello_sergio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/riddle_title_color_text"
+            android:textSize="30sp"
+            android:gravity="center_horizontal"
+            android:text="@string/hello_sergio"
+            />
+
+        <ImageView
+            android:id="@+id/riddle_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/saw"
+            android:layout_below="@id/hello_sergio"/>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relative2Riddle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="3"
+        >
+        <TextView
+            android:id="@+id/riddle_text"
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/riddle_popup"
+            android:textColor="@color/riddle_color_text"
+            android:textSize="25sp"
+            />
+    </RelativeLayout>
 </LinearLayout>
