--- a/app/src/main/res/drawable/background_drawable_delete_game_2.xml
+++ b/app/src/main/res/drawable/background_drawable_delete_game_2.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/colorErrorLogin" />
+                android:color="@color/game_2_grid_color_text" />
             <gradient
                 android:startColor="@color/toast_gradient_start"
                 android:endColor="@color/toast_gradient_end"
@@ -12,13 +12,13 @@
         </shape>
     </item>
     <item
-        android:drawable="@drawable/send"
+        android:drawable="@android:drawable/ic_input_delete"
         android:bottom="1dp"
         android:left="1dp"
         android:right="1dp"
         android:top="1dp"
-        android:width="25dp"
-        android:height="25dp"
+        android:width="30dp"
+        android:height="35dp"
         android:gravity="center">
     </item>
 </layer-list>
