--- a/app/src/main/res/drawable/background_drawable_tick_game_2.xml
+++ b/app/src/main/res/drawable/background_drawable_tick_game_2.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/colorErrorLogin" />
+                android:color="@color/game_2_grid_color_text" />
             <gradient
                 android:startColor="@color/toast_gradient_start"
                 android:endColor="@color/toast_gradient_end"
