--- a/app/src/main/res/drawable/drawable_riddle_separator.xml
+++ b/app/src/main/res/drawable/drawable_riddle_separator.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:bottom="1dp">
+        <shape android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/riddle_border" />
+            <solid android:color="@android:color/transparent" />
+        </shape>
+    </item>
+</layer-list>
 
-</shape>
