--- a/app/src/main/res/drawable/drawable_setup.xml
+++ b/app/src/main/res/drawable/drawable_setup.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:drawable="@drawable/setup"
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp"
+        android:width="35dp"
+        android:height="35dp"
+        android:gravity="center">
+    </item>
 </layer-list>
