--- a/app/src/main/res/drawable/selector_start_game_2.xml
+++ b/app/src/main/res/drawable/selector_start_game_2.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:state_enabled="false"
+        android:drawable="@drawable/start_game_background_drawable_disabled"
+        />
+    <item
+        android:state_pressed="true"
+        android:drawable="@drawable/start_game_background_drawable_pressed"
+        />
+    <item
+        android:state_enabled="true"
+        android:drawable="@drawable/start_game_2_background_drawable"
+        />
 </selector>
