--- a/app/src/main/res/drawable/selector_start_game_2_color.xml
+++ b/app/src/main/res/drawable/selector_start_game_2_color.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:state_enabled="false" android:color="@color/colorButtonDisabled"
+        />
+    <item
+        android:state_pressed="true" android:color="@color/colorButtonPressed"
+        />
+    <item
+        android:state_enabled="true" android:color="@color/main_screen_game_2"
+        />
 </selector>
