--- a/app/src/main/res/layout/activity_main_screen_games.xml
+++ b/app/src/main/res/layout/activity_main_screen_games.xml
@@ -23,8 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/drawable_umbrella_corp"
             android:onClick="adminPass"/>
+<!--            android:src="@drawable/drawable_umbrella_corp"-->
 
     </RelativeLayout>
 
