--- a/app/src/main/res/layout/admin_door_two_password.xml
+++ b/app/src/main/res/layout/admin_door_two_password.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:orientation="horizontal"
             >
             <TextView
                 android:id="@+id/puerta_2"
@@ -25,14 +26,16 @@
                 android:background="@drawable/login_background_drawable"
                 android:layout_marginEnd="5dp"
                 android:textSize="40sp"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:textAlignment="textEnd"
 
                 />
 
             <EditText
                 android:id="@+id/puerta_2_pass"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@drawable/login_background_drawable"
                 android:textSize="40sp"
