--- a/app/src/main/res/layout/riddle_popup.xml
+++ b/app/src/main/res/layout/riddle_popup.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@drawable/drawable_riddle_popup">
      
     <RelativeLayout
         android:id="@+id/relativeRiddle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@drawable/drawable_riddle_separator">
 
         <TextView
             android:id="@+id/hello_sergio"
